--- a/diceroll.html
+++ b/diceroll.html
@@ -31,6 +31,7 @@
       <a class="footer-link" href="https://tomaszcichon919.github.io/Bio/">About me</a>
       <a class="footer-link" href="https://tomaszcichon919.github.io/The-Tindog-Project/">TinDog Project</a>
       <a class="footer-link" href="https://tomaszcichon919.github.io/Yapsi/">Yapsi Personal</a>
+       <a class="footer-link" href=" https://tomaszcichon919.github.io/Simon-Game/">Simon Game</a>
     </div>
 
     <script src="index1.js"></script>
